--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <h1>Mocha</h1>
         </div>
         <div class="items-container">
-            <p>Espresso</p>
+            <p>Cofee packet</p>
             <p>Chocolate</p>
             <p>Steamed Milk</p>
         </div>
