--- a/CofeePage/index.html
+++ b/CofeePage/index.html
@@ -9,7 +9,7 @@
     <nav>
         <h1 class="logo">CoffeeWorld</h1>
         <ul>
-            <li><a href="">Homes</a></li>
+            <li><a href="">Home</a></li>
             <li><a href="">About</a></li>
             <li><a href="">Menu</a></li>
             <li><a href="">Contact</a></li>
