--- a/CofeePage/index.html
+++ b/CofeePage/index.html
@@ -34,7 +34,7 @@
             </div>
             <P>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam,
-                 tempora optio similique culpa illo molestias qui. Reiciendis nam reprehenderit obcaecati qui consequuntur, repellendus enim a vero fugit eligendi deleniti aliquid!
+                 tempora optio similsaique culpa illo molestias qui. Reiciendis nam reprehenderit obcaecati qui consequuntur, repellendus enim a vero fugit eligendi deleniti aliquid!
             </P>
             <button>Learn more</button>
         </div>
