--- a/artpage/index.html
+++ b/artpage/index.html
@@ -130,7 +130,7 @@
             <h1>LOGO</h1>
             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro earum corporis architecto error voluptate. Obcaecati unde ab optio qui accusamus omnis dolorum error, officiis eius tenetur voluptatum rem quia distinctio illum reiciendis delectus asperiores alias possimus nemo assumenda iusto inventore fuga in. Corporis dolorem doloribus, nisi voluptate placeat maiores modi architecto, voluptatibus expedita magni dolore id esse. Et ad velit ullam
                tenetur, voluptatibus quis debitis. Voluptate soluta commodi officiis ipsam nemo recusandae blanditiis? Incidunt ipsa ipsum alias ea quis 
-              deserunt odio aspernatur omnis officia. Voluptates, aperiam repudiandae?</P>
+              deserunt odio aspernatur omnis officia. Voluptatesss, aperiam repudiandae?</P>
           </div>
           <div class="about-company">
             <div class="container">
