--- a/my porfolio/index.html
+++ b/my porfolio/index.html
@@ -47,7 +47,7 @@
               </svg>
             </button>
           </li>
-          <li class="menu-btn"onclick=showSlidebar()>
+          <li class="menu-btn"onclick=showSlidebar(event)>
             <a href="#" class="menu-icon">
               <svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px">
                 <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/>
@@ -70,7 +70,7 @@
    <div class="icon-part">
       <ul>
         <li><a href="https://www.instagram.com/_mun._eeb?igsh=MTBjZ2p3MmxhcG1uZQ==" class="fab fa-instagram" ></a></li>
-        <li><a href="https://github.com/MuneebMoosa" class="fab fa-github" "></a></li>
+        <li><a href="https://github.com/MuneebMoosa" class="fab fa-github" ></a></li>
         <li><a href="https://www.linkedin.com/in/muneeb-moosa-v-v-318270288" class="fab fa-linkedin" ></a></li>
         <li><a href="https://www.facebook.com/share/19yZC22ZBR/" class="fab fa-facebook" ></a></li>
     </ul>
@@ -269,6 +269,6 @@
     <p>&copy; <span id="year"></span> All rights reserved.</p>
 </footer>
 
-  <!-- contact ssection end -->
+  <!-- contact section end -->
 </body>
 </html>
